tests/spec/emit/snapshots/interop_value_enum_nested_module.snap
---
source: tests/spec/emit/interop_matrix.rs
description: "input: \nimport \"go:debug/dwarf\"\n\nfn main() {\n  let t = dwarf.Tag.TagArrayType\n  let _ = t\n}\n"
---
package main

import "debug/dwarf"

func main() {
	t := dwarf.TagArrayType
	_ = t
}
