tests/spec/emit/snapshots/is_none_on_nullable_go_call_opens_the_if_header.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:context"
  import "go:fmt"
  
  fn main() {
    let ctx = context.Background()
    if ctx.Err().is_none() {
      fmt.Println("clean")
    }
  }
---
package main

import (
	"context"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ctx := context.Background()
	if ret := ctx.Err(); lisette.IsNilInterface(ret) {
		fmt.Println("clean")
	}
}
