tests/spec/emit/snapshots/is_ok_on_partial_keeps_the_tagged_path.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn write_all(file: Ref<os.File>) {
    if file.Write(['h', 'i']).is_ok() {
      fmt.Println("written")
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func writeAll(file *os.File) {
	ret, ret_1 := file.Write([]byte{'h', 'i'})
	var result lisette.Partial[int, error]
	if ret_1 != nil {
		result = lisette.MakePartialBoth[int, error](ret, ret_1)
	} else {
		result = lisette.MakePartialOk[int, error](ret)
	}
	if result.IsOk() {
		fmt.Println("written")
	}
}
