tests/spec/emit/snapshots/is_ok_on_pointer_returning_go_call_keeps_the_nil_guard.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn main() {
    if os.Open("a").is_ok() {
      fmt.Println("readable")
    }
  }
---
package main

import (
	"fmt"
	"os"
)

func main() {
	if ret, err := os.Open("a"); err == nil && ret != nil {
		fmt.Println("readable")
	}
}
